# stourio-cc-dashboard

./: .gitignore  LICENSE  README.md  pyproject.toml
stourio_dashboard/: __init__.py  __main__.py  app.py  cli.py  config.py  models.py  parser.py  resources.py  scanner.py
stourio_dashboard/templates/: dashboard.html
