[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stourio-cc-dashboard"
version = "0.1.0"
description = "Local observability dashboard for Claude Code sessions"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "orjson>=3.9.0",
    "click>=8.1.0",
    "httpx>=0.25.0",
]

[project.scripts]
stourio-dashboard = "stourio_dashboard.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["stourio_dashboard*"]

[tool.setuptools.package-data]
stourio_dashboard = ["templates/*.html", "static/*"]
